Closed
Bug 83394
Opened 24 years ago
Closed 24 years ago
Tabindex attribute not working properly in mfcembed app
Categories
(Core Graveyard :: Embedding: APIs, defect, P2)
Tracking
(Not tracked)
VERIFIED
FIXED
mozilla0.9.2
People
(Reporter: christinehoff4, Assigned: jag+mozilla)
References
()
Details
(Keywords: access, embed, Whiteboard: critical for 0.9.2, have patch r, sr, and a)
Attachments
(2 files)
|
585 bytes,
text/html
|
Details | |
|
7.32 KB,
patch
|
Details | Diff | Splinter Review |
Tested on Win98 5/25/09 mfcembed application.
Seven HTML elements have a 'tabindex' attribute: A, AREA, BUTTON, INPUT, OBJECT,
SELECT, TEXTAREA.
Expected results: Tabbing order should occur as indicated
Actual results: In 'mfcembed', tabbing does nothing until you click in the
window to get focus. Then, the tabbing does not go to the first order - its
starts with the second. In Netscape, clicking first is not necessary and tabbing
order is complete.
URL above contains testcases for all applicable elements. Since that directory
is internal, I will attach one testcase for external use.
| Reporter | ||
Comment 1•24 years ago
|
||
Reassigning to saari@netscape.com changing qa contact to chrisd
Assignee: adamlock → saari
QA Contact: mdunn → chrisd
| Reporter | ||
Comment 2•24 years ago
|
||
| Reporter | ||
Comment 3•24 years ago
|
||
If the component is not appropriate, please change.
Comment 4•24 years ago
|
||
jgaunt, is this fixed now with initial focus?
Comment 5•24 years ago
|
||
Nope, not only are tabindexes still out of order, tabbing is all horked. I can't
initially tab into a page's tab order. if there isn't a text input or something
I can click on to start the progression I get bubkis, nada, zip. Oh, and
shift-tab doesn't work either. ;-) If I get to the end of the tab order I'm
stuck, it doesn't want to cycle around like in mozilla.
In mozilla, I get the wacky order, but at least I get right into it.
| Reporter | ||
Comment 6•24 years ago
|
||
When I tested with the 'Netscape' app (5/24/09 build), the tabbing order worked
correctly with the testcases provided. The only problem I have is with the
'mfcembed' app. John, what 'wacky' order are you seeing in Mozilla?
Comment 7•24 years ago
|
||
the 'wacky' order follows what you represent on those pages by labeling the
links "this is link 1 but number 3 in tab order" in that kind of fashion.
Updated•24 years ago
|
Priority: -- → P2
Updated•24 years ago
|
| Assignee | ||
Comment 10•24 years ago
|
||
Per hyatt, since the urlbar is a menulist, tab will select the text in it.
Default Windows behaviour, nothing you can change about it unless you use a
different widget.
Still trying to find out what's going on w.r.t. to tab going out of the document
and never coming back.
Status: NEW → ASSIGNED
| Assignee | ||
Comment 11•24 years ago
|
||
So, when you tab out of textfield 3, the whole document is selected. This works
fine.
The next tab then asks the embedding app. to focus the next item. This is so
that the embedder can decide whether to focus their chrome, the urlbar, some
other widget, or just move it back to the top of the document. For mfcEmbed,
this isn't implemented. I've verified though that it works as designed I could
add a printf at that place if you need some feedback that it indeed works.
That leaves us with two issues:
1) clicking the content area, the first tab doesn't take you to the second
indexed widget, instead of the first.
2) shift-tab doesn't (seem to) work for indexed widgets.
These two bugs show in both mfcEmbed and the mozilla browser itself.
I'll file a new bug on the second issue (if there isn't one already) and will
use this bug to address issue 1.
| Assignee | ||
Comment 12•24 years ago
|
||
Issue 2 is bug 67404.
| Assignee | ||
Comment 13•24 years ago
|
||
bryner fixed most of issue #1 a few days ago. There is a special case where
clicking in the content directly on the body element, you still go to the second
indexed element instead of the first. Bryner has a patch for that.
Comment 14•24 years ago
|
||
| Assignee | ||
Comment 15•24 years ago
|
||
r=jag
Comment 16•24 years ago
|
||
sr=hyatt
Comment 17•24 years ago
|
||
a=chofmann
Updated•24 years ago
|
Whiteboard: critical for 0.9.2
Updated•24 years ago
|
Whiteboard: critical for 0.9.2 → critical for 0.9.2, have patch r, sr, and a
Comment 18•24 years ago
|
||
be good if we could get this on trunk and branch before monday morning if we can.
| Assignee | ||
Comment 19•24 years ago
|
||
Sorry, checked in last night, marking fixed.
Status: ASSIGNED → RESOLVED
Closed: 24 years ago
Resolution: --- → FIXED
| Reporter | ||
Comment 20•24 years ago
|
||
Tested using 06_26_18_0.9.2 'mfcembed' build on Win98. Tested the 'tabindex'
attribute with the following elements:
A, AREA (using image and using object), BUTTON, INPUT, OBJECT, SELECT, TEXTAREA
Tabindex is fixed on all of these elements except the AREA element (when using
object) and the OBJECT element. These problems are already written up as bug
#72870 (AREA used with object) and #88140 (AREA).
Verifying this bug fixed in 'mfcembed' - now works like Netscape build.
Status: RESOLVED → VERIFIED
Updated•7 years ago
|
Product: Core → Core Graveyard
You need to log in
before you can comment on or make changes to this bug.
Description
•