Bug 83394: Tabindex attribute not working properly in mfcembed app''.

Fixes problems with tabbing from the document to elements with the index attribute set in both mfcembed and the regular browser app.

patch by bryner, r=jag, sr=hyatt, a=chofmann